compiler/w_session/tests/errors/invalid-cast.w
fn main() {
    let foo = <*i32>1;
}